--- a/index.html
+++ b/index.html
@@ -1,14 +1,53 @@
 <!DOCTYPE html>
-<html lang="en" />
+<html lang="en">
   <head>
     <title>PDF Tools</title>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width,initial-scale=1" />
     <link rel="stylesheet" href="https://pyscript.net/releases/2023.03.1/pyscript.css" />
     <link rel="stylesheet" href="src/mystyle.css" />
+    <link rel="stylesheet" 
+      href="https://fonts.googleapis.com/css2?family=Bruno+Ace&family=Roboto" />
     <script defer src="https://pyscript.net/releases/2023.03.1/pyscript.js"></script>
+    <script src="https://kit.fontawesome.com/38c5c2c5dc.js" crossorigin="anonymous"></script>
   </head>
   <body>
+    <div class="navbar">
+      <a href="#home">
+        <h1>PDF Tools</h1>
+      </a>
+      <div class="menu" id="top-menu">
+        <i class="fa-solid fa-bars fa-lg" py-click="show_menu()"></i>
+        <a href="#merge">Merge</a>
+        <a href="#split">Split</a>
+        <a href="#compress">Compress</a>
+        <a href="#convert">Convert</a>
+      </div>
+    </div>
+    <div class="header">
+      <h2>Tools to manipulate PDF files</h2>
+      <p>Merge, split, compress and convert any PDF file.</p>
+    </div>
+    <div class="footer"></div>
+    <div class="main">
+      <div class="card merge">
+        <i class="fa-solid fa-object-group fa-2xl"></i>
+        <h3>Merge</h3>
+        <p>Merge PDF files in any order</p>
+      </div>
+      <div class="card">
+        <i class="fa-solid fa-object-ungroup fa-2xl"></i>
+        <p>Merge PDF files in any order</p>
+      </div>
+      <div class="card">
+        <i class="fa-solid fa-minimize fa-2xl"></i>
+        <p>Merge PDF files in any order</p>
+      </div>
+      <div class="card">
+        <i class="fa-solid fa-object-group fa-2xl"></i>
+        <p>Merge PDF files in any order</p>
+      </div>
+    </div>
     <py-script src="src/main.py"></py-script>
     <py-config src="src/pyscript.toml"></py-config>
   </body>
