--- a/index.html
+++ b/index.html
@@ -35,15 +35,16 @@
         <h3>Merge</h3>
         <p>Merge PDF files in any order</p>
       </div>
-      <div class="card">
+      <div class="card split">
         <i class="fa-solid fa-object-ungroup fa-2xl"></i>
+        <h3>Split</h3>
         <p>Merge PDF files in any order</p>
       </div>
-      <div class="card">
+      <div class="card compress">
         <i class="fa-solid fa-minimize fa-2xl"></i>
         <p>Merge PDF files in any order</p>
       </div>
-      <div class="card">
+      <div class="card convert">
         <i class="fa-solid fa-object-group fa-2xl"></i>
         <p>Merge PDF files in any order</p>
       </div>
