--- a/index.html
+++ b/index.html
@@ -20,33 +20,59 @@
         <i class="fa-solid fa-bars fa-lg" py-click="show_menu()"></i>
         <a href="#merge">Merge</a>
         <a href="#split">Split</a>
-        <a href="#compress">Compress</a>
-        <a href="#convert">Convert</a>
+        <a href="#organize">Organize</a>
+        <a href="#edit">Edit</a>
+        <a href="#optimize">Optimize</a>
+        <a href="#extract">Extract</a>
       </div>
     </div>
     <div class="header">
       <h2>Tools to manipulate PDF files</h2>
-      <p>Merge, split, compress and convert any PDF file.</p>
+      <p>Merge, split, organize, edit and optimize any PDF file.</p>
     </div>
     <div class="footer"></div>
     <div class="main">
       <div class="card merge">
-        <i class="fa-solid fa-object-group fa-2xl"></i>
-        <h3>Merge</h3>
-        <p>Merge PDF files in any order</p>
+        <a href="#merge">
+          <i class="fa-solid fa-object-group fa-2xl"></i>
+          <h3>Merge</h3>
+          <p>Merge two or more PDF files in any order</p>
+        </a>
       </div>
       <div class="card split">
-        <i class="fa-solid fa-object-ungroup fa-2xl"></i>
-        <h3>Split</h3>
-        <p>Merge PDF files in any order</p>
+        <a href="#split">  
+          <i class="fa-solid fa-object-ungroup fa-2xl"></i>
+          <h3>Split</h3>
+          <p>Divide PDF files, extract pages and more</p>
+        </a>      
       </div>
-      <div class="card compress">
-        <i class="fa-solid fa-minimize fa-2xl"></i>
-        <p>Merge PDF files in any order</p>
+      <div class="card organize">
+        <a href="#organize">
+          <i class="fa-solid fa-shuffle fa-2xl"></i>
+          <h3>Organize</h3>
+          <p>Reorder, delete or add pages in a PDF file</p>
+        </a>
       </div>
-      <div class="card convert">
-        <i class="fa-solid fa-object-group fa-2xl"></i>
-        <p>Merge PDF files in any order</p>
+      <div class="card edit">
+        <a href="#edit">
+          <i class="fa-solid fa-pen-to-square fa-2xl"></i>
+          <h3>Edit</h3>
+          <p>Edit PDF, add signature, text or stamp</p>
+        </a>
+      </div>
+      <div class="card optimize">
+        <a href="#optimize">
+          <i class="fa-solid fa-minimize fa-2xl"></i>
+          <h3>Optimize</h3>
+          <p>Compress, crypt or decrypt PDF files</p>
+        </a>
+      </div>
+      <div class="card extract">
+        <a href="#extract">
+          <i class="fa-solid fa-up-right-from-square fa-2xl"></i>
+          <h3>Extract</h3>
+          <p>Extract text, images or tables from a PDF file</p>
+        </a>
       </div>
     </div>
     <py-script src="src/main.py"></py-script>
