starting pdf reader

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <h1>PDF Tools</h1>
       </a>
       <div class="menu" id="top-menu">
-        <i class="fa-solid fa-bars fa-lg" py-click="show_menu()" />
+        <i class="fa-solid fa-bars fa-lg" py-click="show_menu()"></i>
         <a href="merge.html">Merge</a>
         <a href="#split">Split</a>
         <a href="#organize">Organize</a>
@@ -34,14 +34,14 @@
     <div class="main">
       <div class="card merge">
         <a href="merge.html">
-          <i class="fa-solid fa-object-group fa-2xl" />
+          <i class="fa-solid fa-object-group fa-2xl"></i>
           <h3>Merge</h3>
           <p>Merge two or more PDF files in any order</p>
         </a>
       </div>
       <div class="card split">
         <a href="#split">  
-          <i class="fa-solid fa-object-ungroup fa-2xl" />
+          <i class="fa-solid fa-object-ungroup fa-2xl"></i>
           <h3>Split</h3>
           <p>Divide PDF files, extract pages and more</p>
         </a>      
@@ -55,21 +55,21 @@
       </div>
       <div class="card edit">
         <a href="#edit">
-          <i class="fa-solid fa-pen-to-square fa-2xl" />
+          <i class="fa-solid fa-pen-to-square fa-2xl"></i>
           <h3>Edit</h3>
           <p>Edit PDF, add signature, text or stamp</p>
         </a>
       </div>
       <div class="card optimize">
         <a href="#optimize">
-          <i class="fa-solid fa-minimize fa-2xl" />
+          <i class="fa-solid fa-minimize fa-2xl"></i>
           <h3>Optimize</h3>
           <p>Compress, crypt or decrypt PDF files</p>
         </a>
       </div>
       <div class="card extract">
         <a href="#extract">
-          <i class="fa-solid fa-up-right-from-square fa-2xl" />
+          <i class="fa-solid fa-up-right-from-square fa-2xl"></i>
           <h3>Extract</h3>
           <p>Extract text, images or tables from a PDF file</p>
         </a>
