--- a/merge.html
+++ b/merge.html
@@ -4,7 +4,7 @@
     <title>PDF Tools</title>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width,initial-scale=1" />
-    <link rel="stylesheet" href="https://pyscript.net/releases/2023.03.1/pyscript.css" />
+    <link rel="stylesheet" href="https://pyscript.net/releases/2023.0.3.1/pyscript.css" />
     <link rel="stylesheet" href="src/mystyle.css" />
     <link rel="stylesheet" 
       href="https://fonts.googleapis.com/css2?family=Bruno+Ace&family=Roboto" />
@@ -17,7 +17,7 @@
         <h1>PDF Tools</h1>
       </a>
       <div class="menu" id="top-menu">
-        <i class="fa-solid fa-bars fa-lg" py-click="show_menu()" />
+        <i class="fa-solid fa-bars fa-lg" py-click="show_menu()"></i>
         <a href="#merge">Merge</a>
         <a href="#split">Split</a>
         <a href="#organize">Organize</a>
@@ -26,10 +26,11 @@
         <a href="#extract">Extract</a>
       </div>
     </div>
-    <div class="canvas">
+    <div class="canvas" id="target">
       <h2>Merge PDF files</h2>
       <p>Merge two or more PDF files in any order</p>
-      <label class="select merge">Select PDF files<input type="file" accept=".pdf" multiple />
+      <label class="select merge">Select PDF files
+        <input type="file" accept=".pdf" id="selector" multiple />
       </label>
     <py-script src="src/main.py" />
     <py-config src="src/pyscript.toml" />
