--- a/merge.html
+++ b/merge.html
@@ -32,6 +32,12 @@
       <label class="select merge" id="select-container">Select PDF files
         <input type="file" accept=".pdf" id="selector" multiple />
       </label>
+    </div>
+    <div class="controls">
+      <label class="add merge">
+        <i class="fa-solid fa-plus"></i>
+        <input type="file" accept=".pdf" id="add-selector" multiple />
+      </label>
       <button class="action merge" id="action-button">Merge!</button>
     </div>
     <div class="footer">
