--- a/merge.html
+++ b/merge.html
@@ -30,7 +30,7 @@
       <h2 id="title">Merge PDF files</h2>
       <p id="description">Merge two or more PDF files in any order</p>
       <button class="select merge" id="selector">Select PDF files</button>
-      <p style="position: relative; top: 25%;">(or drag and drop them here)</p>
+      <p id= "dragndrop" style="position: relative; top: 25%;">(or drag and drop them here)</p>
     </div>
     <div class="controls">
       <button class="add merge" id="add-selector">
