--- a/merge.html
+++ b/merge.html
@@ -48,6 +48,9 @@
       </p>
       <div id="templink"></div>
     </div>
+    <div class="drag" id="div-drag">
+      <h2>Drop here!</h2>
+    </div>
     <py-script src="src/merge.py" />
     <py-config src="src/pyscript.toml" />
   </body>
